# cc-config

./: package-lock.json  package.json  test-filesystem-access.md
.claude/: settings.local.json
cc-config-viewer/: .eslintrc.json  .gitignore  .lighthouserc.json  .prettierignore  .prettierrc  ARCHITECTURE.md  CLAUDE.md  CRITICAL_PATH_COMPLETION_REPORT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  EMAIL_INVITATION_TEMPLATE.txt  INTEGRATION_TEST_FIX_PLAN.md  INTEGRATION_TEST_PROGRESS.md  MEETING_PREPARATION_CHECKLIST.md  PERFORMANCE.md  README.md  RELEASE_DRAFTER.yml  SECURITY.md  SESSION-10-SUMMARY.md  SESSION-9-SUMMARY.md  STAKEHOLDER_ACCEPTANCE_MEETING.md  STAKEHOLDER_MEETING_INVITATION.md  STORY-6-COMPLETE.md  TASK-10-INTERNATIONALIZATION-SUMMARY.md  TASK-11-FINAL-QA-SUMMARY.md  TASK-4-PERFORMANCE-SUMMARY.md  TASK-5-ACCESSIBILITY-SUMMARY.md  TASK-6-SECURITY-SUMMARY.md  TASK-7-CROSS-PLATFORM-SUMMARY.md  TASK-8-CICD-SUMMARY.md  TASK-9-REGRESSION-SUMMARY.md  eslint.config.js  index.html  lighthouserc.js  package-lock.json  package.json  (+7 more)
cc-config-viewer/src-tauri/: Cargo.toml  tauri.conf.json
cc-config-viewer/src-tauri/capabilities/: default.json
cc-config-viewer/src-tauri/src/: lib.rs  main.rs
cc-config-viewer/src-tauri/src/commands/: config.rs  error_commands.rs  export_commands.rs  export_commands_test.rs  mod.rs  project_commands.rs  source.rs
cc-config-viewer/src-tauri/src/config/: mod.rs  reader.rs  settings.rs  watcher.rs
cc-config-viewer/src-tauri/src/types/: app.rs  error.rs  export.rs  mod.rs
cc-config-viewer/src-tauri/src/utils/: error_logger.rs  mod.rs
(+366 files in other folders)
