[package]
name = "cc-config-viewer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cc_config_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Build optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tauri-plugin-fs = "2.4.4"
dirs = "6.0.0"
notify = "6.1"
notify-debouncer-mini = "0.4"
tempfile = "3.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

